--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KROPP</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="global.css">
 </head>
 <body>
   <header>
     <h1 class="logo">KROPP</h1>
-    <h2>메뉴뉴</h2>
+    <h2 class="a11y-hidden">메뉴</h2>
     <nav class="gnb">
       <ul>
         <li><a href=""></a></li>
@@ -26,10 +26,10 @@
   </header>
   <main>
     <section>
-      <h2>advertisement</h2>
+      <h2 class="a11y-hidden">advertisement</h2>
       <div class="silde">
         <div class="side__information">
-          
+
         </div>
         <div class="silde__bullet">
           <button></button>
