--- a/index.html
+++ b/index.html
@@ -4,34 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KROPP</title>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header>
-    <h1 class="logo">KROPP</h1>
+    <h1 class="logo">
+      <a href="">
+        <img src="images/logo.png" alt="KROPP">
+      </a>
+    </h1>
     <h2 class="a11y-hidden">메뉴</h2>
     <nav class="gnb">
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">ABOUT</a></li>
+        <li><a href="">mission</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">members</a></li>
       </ul>
     </nav>
     <div class="utility">
-      <button class="btn-book"></button>
-      <button class="btn"></button>
+      <button class="btn-book">Book now</button>
+      <button class="btn"><img src="images/ico_what.svg" alt="what"></button>
     </div>
   </header>
   <main>
     <section>
       <h2 class="a11y-hidden">advertisement</h2>
-      <div class="silde">
-        <div class="side__information">
-
+      <div class="slide">
+        <div class="slide__information">
+          <div class="img_slide"><img src="images/slide.png" alt=""></div>
+          <div class="slide-small-text">New event<br>coming up / june 7 - 13</div>
+          <div class="slide-big-text">crossfit</div>
         </div>
-        <div class="silde__bullet">
+        <div class="slide__bullet">
           <button></button>
           <button></button>
           <button></button>
