추가: section-information

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
       <button class="btn"><img src="images/ico_what.svg" alt="what"></button>
     </div>
   </header>
+
   <main>
     <section>
       <h2 class="a11y-hidden">advertisement</h2>
-      <div class="slide">
-        <div class="slide__information">
-          <div class="img_slide"><img src="images/slide.png" alt=""></div>
-          <div class="slide-small-text">New event<br>coming up / june 7 - 13</div>
-          <div class="slide-big-text">crossfit</div>
+      <div class="slide-wrapper">
+        <div class="slide slide-information">
+          <div class="slide--upper-wrapper">
+            <div class="slide--image"><img src="images/slide.png" alt=""></div>
+            <div class="slide--small-text">New event<br>coming up / june 7 - 13</div>
+          </div>
+            <div class="slide--big-text">crossfit</div>
         </div>
         <div class="slide__bullet">
-          <button></button>
-          <button></button>
-          <button></button>
         </div>
       </div>
     </section>
