style: add slide bullet

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
             <div class="slide--image"><img src="images/slide.png" alt=""></div>
             <div class="slide--small-text">New event<br>coming up / june 7 - 13</div>
           </div>
-            <div class="slide--big-text">crossfit</div>
-        </div>
-        <div class="slide__bullet">
+          <div class="slide--big-text">crossfit</div>
+          <div class="slide__bullet">
+            <img src="images/ico_bullet.svg" alt="">
+          </div>
         </div>
       </div>
     </section>
