style: add split sections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KROPP</title>
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="index.css">
 </head>
@@ -32,7 +32,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="section-hero">
       <h2 class="a11y-hidden">advertisement</h2>
       <div class="slide-wrapper">
         <div class="slide slide-information">
@@ -47,6 +47,27 @@
         </div>
       </div>
     </section>
+
+    <section class="section-split" id="first">
+      <h2 class="a11y-hidden">advertisement</h2>
+      <div class="split--text">
+        <div class="lg-text">Be you, just stronger!<br>Power is in you</div>
+        <div class="sm-text">Unum solum justo ex ius. Pro cu probo laboramus<br>eius insolens euripidis te eos, ut agam tota.</div>
+        <a class="bnt-viewMore"><span>View more</span><img src="images/ico_viewMore.svg" alt=""></a>
+      </div>
+      <div class="split--img"><img src="images/img_split_strong.png" alt=""></div>
+    </section>
+
+    <section class="section-split" id="second">
+      <h2 class="a11y-hidden">advertisement</h2>
+      <div class="split--img"><img src="images/img_split_start.png" alt=""></div>
+      <div class="split--text">
+        <div class="lg-text">Today is the best<br>day to start!</div>
+        <div class="sm-text">Sed abhorreant constituam consectetuer eu. At mei<br>clita deserunt, his movet molestie nemore.</div>
+        <a class="bnt-viewMore"><span>View more</span><img src="images/ico_viewMore.svg" alt=""></a>
+      </div>
+    </section>
+
   </main>
 
 </body>
