style: add partners section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,40 @@
       </div>
     </section>
 
+    <section class="section-partners">
+      <h2 class="a11y-hidden"></h2>
+      <div class="partner">
+        <img src="images/ico_partner_maxpump.svg" alt="">
+        <div class="icon--text">Maxpump</div>
+      </div>
+
+      <div class="partner">
+        <img src="images/ico_partner_aronGym.svg"  alt="">
+        <div class="icon--text">aron gym</div>
+      </div>
+
+      <div class="partner">
+        <img src="images/ico_partner_fitAndTone.svg" alt="">
+        <div class="icon--text">fit &amp; tone</div>
+      </div>
+
+      <div class="partner">
+        <img src="images/ico_partner_forza.svg" alt="">
+        <div class="icon--text">forza</div>
+      </div>
+      
+      <div class="partner">
+        <img src="images/ico_partner_balanceFitness.svg" alt="">
+        <div class="icon--text">balance fitness</div>
+      </div>
+
+      <div class="partner">
+        <img src="images/ico_partner_bodySculpt.svg" alt="">
+        <div class="icon--text">body sculpt</div>
+      </div>
+
+    </section>
+
   </main>
 
 </body>
