style: add join us section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
       </div>
 
     </section>
-
+    <section class="section-joinUs">
+      <img src="images/joinUs_video__dummy.png" alt="video dummy">
+      <div class="joinUs--play"><span>PLAY<img src="images/joinUs_play_arrow.svg" alt=""></span></div>
+      <div class="joinUs--text"><span>JOIN US</span><img src="images/ico_joinUs.svg" alt=""></div>
+    </section>
   </main>
 
 </body>
