fix: change join us section to video section

--- a/index.html
+++ b/index.html
@@ -101,10 +101,21 @@
       </div>
 
     </section>
-    <section class="section-joinUs">
-      <img src="images/joinUs_video__dummy.png" alt="video dummy">
-      <div class="joinUs--play"><span>PLAY<img src="images/joinUs_play_arrow.svg" alt=""></span></div>
-      <div class="joinUs--text"><span>JOIN US</span><img src="images/ico_joinUs.svg" alt=""></div>
+
+    <section class="section-video">
+      <img src="images/video__dummy.png" alt="video dummy">
+      <div class="video--play"><span>PLAY<img src="images/video_play_arrow.svg" alt=""></span></div>
+    </section>
+    
+    <section class="section-form">
+      <div class="--text"><span>JOIN US</span><img src="images/ico_joinUs.svg" alt=""></div>
+      <div class="lg-text">Start here</div>
+      <div class="sm-text">fill the form below to start your journey</div>
+      <div class="input-wrapper">
+        <input type="text" id="input-name">
+        <input type="text" id="input-emali">
+        <button id="btn-subscribe"></button>
+      </div>
     </section>
   </main>
 
