style: add form section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="split--text">
         <div class="lg-text">Be you, just stronger!<br>Power is in you</div>
         <div class="sm-text">Unum solum justo ex ius. Pro cu probo laboramus<br>eius insolens euripidis te eos, ut agam tota.</div>
-        <a class="bnt-viewMore"><span>View more</span><img src="images/ico_viewMore.svg" alt=""></a>
+        <a class="bnt-viewMore btn-arrow">View more</a>
       </div>
       <div class="split--img"><img src="images/img_split_strong.png" alt=""></div>
     </section>
@@ -64,7 +64,7 @@
       <div class="split--text">
         <div class="lg-text">Today is the best<br>day to start!</div>
         <div class="sm-text">Sed abhorreant constituam consectetuer eu. At mei<br>clita deserunt, his movet molestie nemore.</div>
-        <a class="bnt-viewMore"><span>View more</span><img src="images/ico_viewMore.svg" alt=""></a>
+        <a class="bnt-viewMore btn-arrow">View more</a>
       </div>
     </section>
 
@@ -106,15 +106,15 @@
       <img src="images/video__dummy.png" alt="video dummy">
       <div class="video--play"><span>PLAY<img src="images/video_play_arrow.svg" alt=""></span></div>
     </section>
-    
+  
     <section class="section-form">
-      <div class="--text"><span>JOIN US</span><img src="images/ico_joinUs.svg" alt=""></div>
+      <div class="title-text"><span>JOIN US</span><img src="images/ico_joinUs.svg" alt=""></div>
       <div class="lg-text">Start here</div>
       <div class="sm-text">fill the form below to start your journey</div>
       <div class="input-wrapper">
-        <input type="text" id="input-name">
-        <input type="text" id="input-emali">
-        <button id="btn-subscribe"></button>
+        <input type="text" placeholder="Name" id="input-name">
+        <input type="text" placeholder="Email" id="input-emali">
+        <a class="btn-arrow" id="btn-subscribe">Subscribe</a>
       </div>
     </section>
   </main>
