style: add section-map

--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
         <a class="btn-arrow" id="btn-subscribe">Subscribe</a>
       </div>
     </section>
+
+    <section class="section-map">
+      <div class="map-container">
+        <img src="images/map__dummy.png" alt="">
+      </div>
+      <div class="text-wrapper">
+        <div class="lg-text">Find us near you</div>
+        <div class="sm-text">Nec suas signiferumque id. An eum labore commodo principes.<br>Usu diam noluisse cu, nam adipisci</div>
+        <a class="btn-arrow btn-viewMore">view more</a>
+      </div>
+    </section>
   </main>
 
 </body>
