style: add secition-family

--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
         <a class="btn-arrow btn-viewMore">view more</a>
       </div>
     </section>
+
+    <section class="section-family">
+      <div class="lg-text">be a part of our fit family</div>
+      <div class="sm-text">Training helps you think and feel better. join us!</div>
+      <div class="image-wrapper">
+        <img src="images/img_family_1.png" alt="">
+        <img src="images/img_family_2.png" alt="">
+        <img src="images/img_family_3.png" alt="">
+        <img src="images/img_family_4.png" alt="">
+        <img src="images/img_family_1.png" alt="">
+      </div>
+    </section>
   </main>
 
 </body>
