--- a/index.html
+++ b/index.html
@@ -140,7 +140,48 @@
         <img src="images/img_family_1.png" alt="">
       </div>
     </section>
+    
+    <section class="section-bmi">
+      <div class="text-wrapper">
+        
+        <div class="lg-text">Input your BMI</div>
+        <div class="sm-text">Duo graece ponderum ne, ei mel aliquando. Pro te<br>tamquam nonumes, nam no nemore epicurei</div>
+        <div class="input-wrapper">
+          <input type="number" placeholder="Height / cm">
+          <input type="number" placeholder="Weight / kg">
+          <input type="number" placeholder="Age">
+          <input type="text" placeholder="Gender">
+          <input type="number" placeholder="Select an activity factor:">
+        </div>
+        <button class="btn-arrow" id="btn-bmiCalculate">Calculate</button>
+      </div>
+      <div class="bmi-wrapper">
+        <div class="table">
+          <div class="header row">
+            <div class="cell">BMI</div>
+            <div class="cell">Weight status</div>
+          </div>
+          <div class="row">
+            <div class="cell">Below 18.5</div>
+            <div class="cell">Underweight</div>
+          </div>
+          <div class="row">
+            <div class="cell">18.5 - 24.9</div>
+            <div class="cell">Healthy</div>
+          </div>
+          <div class="row">
+            <div class="cell">25.0 - 29.9</div>
+            <div class="cell">Overweight</div>
+          </div>
+          <div class="row">
+            <div class="cell">30.0 - and Above</div>
+            <div class="cell">Obese</div>
+          </div>
+        </div>
+        <span> <strong>BMR</strong> Metabolic Rate / <strong>BMI</strong> Body Mass Index</span>
+      </div>
+    </section>
   </main>
-
+  <footer></footer>
 </body>
 </html>
