style: refactor for interactive hamburger menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       </a>
     </h1>
     <h2 class="a11y-hidden">메뉴</h2>
+    <div class="utility">
+      <button class="btn-book">Book now</button>
+      <input id="hamburger" type="checkbox">
+      <label for="hamburger" id="btn-hamburger">
+        <div class="btn"><img src="images/ico_what.svg" alt="what"></div>
+      </label>
+    </div>
     <nav class="gnb">
       <ul>
         <li><a href="">Home</a></li>
@@ -25,10 +32,6 @@
         <li><a href="">members</a></li>
       </ul>
     </nav>
-    <div class="utility">
-      <button class="btn-book">Book now</button>
-      <button class="btn"><img src="images/ico_what.svg" alt="what"></button>
-    </div>
   </header>
 
   <main>
