refactor: add footer responsivility

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="split--text">
         <div class="lg-text">Be you, just stronger!<br>Power is in you</div>
         <div class="sm-text">Unum solum justo ex ius. Pro cu probo laboramus<br>eius insolens euripidis te eos, ut agam tota.</div>
-        <a class="bnt-viewMore btn-arrow">View more</a>
+        <a class="bnt-viewMore btn--arrow">View more</a>
       </div>
       <div class="split--img"><img src="images/img_split_strong.png" alt=""></div>
     </section>
@@ -67,7 +67,7 @@
       <div class="split--text">
         <div class="lg-text">Today is the best<br>day to start!</div>
         <div class="sm-text">Sed abhorreant constituam consectetuer eu. At mei<br>clita deserunt, his movet molestie nemore.</div>
-        <a class="bnt-viewMore btn-arrow">View more</a>
+        <a class="bnt-viewMore btn--arrow">View more</a>
       </div>
     </section>
 
@@ -117,7 +117,7 @@
       <div class="input-wrapper">
         <input type="text" placeholder="Name" id="input-name">
         <input type="text" placeholder="Email" id="input-emali">
-        <a class="btn-arrow" id="btn-subscribe">Subscribe</a>
+        <a class="btn--arrow" id="btn-subscribe">Subscribe</a>
       </div>
     </section>
 
@@ -128,7 +128,7 @@
       <div class="text-wrapper">
         <div class="lg-text">Find us near you</div>
         <div class="sm-text">Nec suas signiferumque id. An eum labore commodo principes.<br>Usu diam noluisse cu, nam adipisci</div>
-        <a class="btn-arrow btn-viewMore">view more</a>
+        <a class="btn--arrow btn-viewMore">view more</a>
       </div>
     </section>
 
@@ -156,7 +156,7 @@
           <input type="text" placeholder="Gender">
           <input type="number" placeholder="Select an activity factor:">
         </div>
-        <button class="btn-arrow" id="btn-bmiCalculate">Calculate</button>
+        <button class="btn--arrow" id="btn-bmiCalculate">Calculate</button>
       </div>
       <div class="bmi-wrapper">
         <div class="table">
@@ -185,32 +185,33 @@
       </div>
     </section>
   </main>
+
   <footer>
-    <div class="grid-wrapper">
-      <img src="images/logo.png" alt="" id="logo">
-      <span class="footer-body">please feel free to send us an e-mail at kropp@qodeinteractive.com For any additional inquiries</span>
-      <div class="footer-item" id="footer-about">
-        <div class="footer-item-title">About</div>
-        <div class="footer-item-body">Shape up your site with Kropp,<br>a theme especially made for<br>fitness &amp; gym websites.</div>
+    <div class="footer__wrapper ">
+      <div class="footer__logo"><img src="images/logo.png" alt=""></div>
+      <span class="footer__text">please feel free to send us an e-mail at kropp@qodeinteractive.com For any additional inquiries</span>
+      <div class="footer__item" id="footer__item--about">
+        <div class="footer__item__title">About</div>
+        <div class="footer__item__body">Shape up your site with Kropp, a theme especially made for fitness &amp; gym websites.</div>
       </div>
-      <div class="footer-item" id="footer-workingHours ">
-        <div class="footer-item-title">Working hours</div>
-        <div class="footer-item-body">
+      <div class="footer__item" id="footer__item--working-hours">
+        <div class="footer__item__title">Working hours</div>
+        <div class="footer__item__body">
           <span>Monday - Friday<br>05:30 - 24:00</span>
           <span>Weekdays<br>00:00 - 24:00</span>
         </div>
       </div>
-      <div class="footer-item" id="footer-location">
-        <div class="footer-item-title">Location</div>
-        <div class="footer-item-body">
+      <div class="footer__item" id="footer__item--location">
+        <div class="footer__item__title">Location</div>
+        <div class="footer__item__body">
           <span>68 Jay Street, Brooklyn,<br>NY 11201, United States</span>
           <span>kropp@qodeinteractive.com<br>+ (1) 718 - 407 - 6400</span>
+        </div>
       </div>
-      </div>
-      <div class="footer-item" id="footer-startNow">
-        <div class="footer-item-title">start now</div>
-        <div class="btn-arrow"><input type="email" placeholder="Email"></div>
-        <div class="icon-wrapper">
+      <div class="footer__item" id="footer__item--start-now">
+        <div class="footer__item__title">start now</div>
+        <div class="btn--arrow"><input type="email" placeholder="Email"></div>
+        <div class="footer__item__icon-wrapper">
           <a><img src="images/ico_ticktok.svg" alt=""></a>
           <a><img src="images/ico_youtube.svg" alt=""></a>
           <a><img src="images/ico_instagram.svg" alt=""></a>
@@ -218,8 +219,9 @@
           <a><img src="images/ico_twitter.svg" alt=""></a>
         </div>
       </div>
-      <span class="footer-bottom-text">© 2022 Qode Interactive, All Rights Reserved | Privacy Policy | Contact Us</span>
+      <span class="footer__bottom-text">© 2022 Qode Interactive, All Rights Reserved | Privacy Policy | Contact Us</span>
     </div>
   </footer>
+  
 </body>
 </html>
