refactor: add responsibility to split section

--- a/index.html
+++ b/index.html
@@ -35,42 +35,46 @@
   </header>
 
   <main>
-    <section class="section-hero">
+    <section class="section--hero">
       <h2 class="a11y-hidden">advertisement</h2>
-      <div class="slide-wrapper">
-        <div class="slide slide-information">
-          <div class="slide--upper-wrapper">
-            <div class="slide--image"><img src="images/slide.png" alt=""></div>
-            <div class="slide--small-text">New event<br>coming up / june 7 - 13</div>
+      <div class="slider__wrapper">
+        <div class="slider__silde slider__slide--information">
+          <div class="slide__upper-wrapper">
+            <div class="slide__image"><img src="images/slide.png" alt=""></div>
+            <div class="slide__small-text">New event<br>coming up / june 7 - 13</div>
           </div>
-          <div class="slide--big-text">crossfit</div>
-          <div class="slide__bullet">
-            <img src="images/ico_bullet.svg" alt="">
-          </div>
+          <div class="slide__big-text">crossfit</div>
+        </div>
+        <div class="slider__bullet">
+          <img src="images/ico_bullet.svg" alt="">
         </div>
       </div>
     </section>
 
-    <section class="section-split" id="first">
+    <section class="section--split split--first">
       <h2 class="a11y-hidden">advertisement</h2>
-      <div class="split--text">
-        <div class="lg-text">Be you, just stronger!<br>Power is in you</div>
-        <div class="sm-text">Unum solum justo ex ius. Pro cu probo laboramus<br>eius insolens euripidis te eos, ut agam tota.</div>
-        <a class="bnt-viewMore btn--arrow">View more</a>
-      </div>
-      <div class="split--img"><img src="images/img_split_strong.png" alt=""></div>
-    </section>
-
-    <section class="section-split" id="second">
-      <h2 class="a11y-hidden">advertisement</h2>
-      <div class="split--img"><img src="images/img_split_start.png" alt=""></div>
-      <div class="split--text">
-        <div class="lg-text">Today is the best<br>day to start!</div>
-        <div class="sm-text">Sed abhorreant constituam consectetuer eu. At mei<br>clita deserunt, his movet molestie nemore.</div>
-        <a class="bnt-viewMore btn--arrow">View more</a>
+      <div class="split--wrapper">
+        <div class="split__text-wrapper">
+          <div class="split__text--lg lg-text">Be you, just stronger!<br>Power is in you</div>
+          <div class="split__text--sm">Unum solum justo ex ius. Pro cu probo laboramus eius insolens euripidis te eos, ut agam tota.</div>
+          <a class="split__button btn--arrow">View more</a>
+        </div>
+        <div class="split__img"><img src="images/img_split_strong.png" alt=""></div>
       </div>
     </section>
 
+    <section class="section--split split--second">
+      <h2 class="a11y-hidden">advertisement</h2>
+      <div class="split--wrapper">
+        <div class="split__img"><img src="images/img_split_start.png" alt=""></div>
+        <div class="split__text-wrapper">
+          <div class="split__text--lg lg-text">Today is the best<br>day to start!</div>
+          <div class="split__text--sm">Sed abhorreant constituam consectetuer eu. At mei clita deserunt, his movet molestie nemore.</div>
+          <a class="split__button btn--arrow">View more</a>
+        </div>
+      </div>
+    </section>
+<!-- 
     <section class="section-partners">
       <h2 class="a11y-hidden"></h2>
       <div class="partner">
@@ -183,7 +187,7 @@
         </div>
         <span> <strong>BMR</strong> Metabolic Rate / <strong>BMI</strong> Body Mass Index</span>
       </div>
-    </section>
+    </section> -->
   </main>
 
   <footer>
