--- a/index.html
+++ b/index.html
@@ -74,41 +74,41 @@
         </div>
       </div>
     </section>
-<!-- 
-    <section class="section-partners">
+
+    <section class="section--partners">
       <h2 class="a11y-hidden"></h2>
-      <div class="partner">
+      <div class="partners__partner">
         <img src="images/ico_partner_maxpump.svg" alt="">
-        <div class="icon--text">Maxpump</div>
+        <div class="partner__text">Maxpump</div>
       </div>
 
-      <div class="partner">
+      <div class="partners__partner">
         <img src="images/ico_partner_aronGym.svg"  alt="">
-        <div class="icon--text">aron gym</div>
+        <div class="partner__text">aron gym</div>
       </div>
 
-      <div class="partner">
+      <div class="partners__partner">
         <img src="images/ico_partner_fitAndTone.svg" alt="">
-        <div class="icon--text">fit &amp; tone</div>
+        <div class="partner__text">fit &amp; tone</div>
       </div>
 
-      <div class="partner">
+      <div class="partners__partner">
         <img src="images/ico_partner_forza.svg" alt="">
-        <div class="icon--text">forza</div>
+        <div class="partner__text">forza</div>
       </div>
       
-      <div class="partner">
+      <div class="partners__partner">
         <img src="images/ico_partner_balanceFitness.svg" alt="">
-        <div class="icon--text">balance fitness</div>
+        <div class="partner__text">balance fitness</div>
       </div>
 
-      <div class="partner">
+      <div class="partners__partner">
         <img src="images/ico_partner_bodySculpt.svg" alt="">
-        <div class="icon--text">body sculpt</div>
+        <div class="partner__text">body sculpt</div>
       </div>
 
     </section>
-
+<!-- 
     <section class="section-video">
       <img src="images/video__dummy.png" alt="video dummy">
       <div class="video--play"><span>PLAY<img src="images/video_play_arrow.svg" alt=""></span></div>
