refactor: make setcion form responisive

--- a/index.html
+++ b/index.html
@@ -108,23 +108,24 @@
       </div>
 
     </section>
-<!-- 
-    <section class="section-video">
+    
+    <section class="section--video">
       <img src="images/video__dummy.png" alt="video dummy">
-      <div class="video--play"><span>PLAY<img src="images/video_play_arrow.svg" alt=""></span></div>
+      <div class="video__btn--play"><span>PLAY<img src="images/video_play_arrow.svg" alt=""></span></div>
     </section>
   
-    <section class="section-form">
-      <div class="title-text"><span>JOIN US</span><img src="images/ico_joinUs.svg" alt=""></div>
-      <div class="lg-text">Start here</div>
-      <div class="sm-text">fill the form below to start your journey</div>
-      <div class="input-wrapper">
-        <input type="text" placeholder="Name" id="input-name">
-        <input type="text" placeholder="Email" id="input-emali">
-        <a class="btn--arrow" id="btn-subscribe">Subscribe</a>
+    <section class="section--form">
+      <div class="form__title"><span>JOIN US</span><img src="images/ico_joinUs.svg" alt=""></div>
+      <div class="form__text--lg lg-text">Start here</div>
+      <div class="form__text--sm sm-text">fill the form below to start your journey</div>
+      <div class="form__input--wrapper">
+        <input type="text" placeholder="Name" id="form__input--name">
+        <input type="text" placeholder="Email" id="form__input--emali">
+        <a class="btn--arrow form__btn--subscribe">Subscribe</a>
       </div>
     </section>
 
+<!-- 
     <section class="section-map">
       <div class="map-container">
         <img src="images/map__dummy.png" alt="">
