refactor: make map section responsive

--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
       </div>
     </section>
 
-<!-- 
-    <section class="section-map">
-      <div class="map-container">
+    <section class="section--map">
+      <div class="map__map--wrapper">
         <img src="images/map__dummy.png" alt="">
       </div>
-      <div class="text-wrapper">
-        <div class="lg-text">Find us near you</div>
-        <div class="sm-text">Nec suas signiferumque id. An eum labore commodo principes.<br>Usu diam noluisse cu, nam adipisci</div>
-        <a class="btn--arrow btn-viewMore">view more</a>
+      <div class="map__text--wrapper">
+        <div class="lg-text map__text--lg">Find us near you</div>
+        <div class="sm-text map__text--sm">Nec suas signiferumque id. An eum labore commodo principes. Usu diam noluisse cu, nam adipisci</div>
+        <a class="btn--arrow map__btn--view-more">view more</a>
       </div>
     </section>
 
+<!-- 
     <section class="section-family">
       <div class="lg-text">be a part of our fit family</div>
       <div class="sm-text">Training helps you think and feel better. join us!</div>
