--- a/index.html
+++ b/index.html
@@ -136,19 +136,22 @@
       </div>
     </section>
 
-<!-- 
-    <section class="section-family">
-      <div class="lg-text">be a part of our fit family</div>
-      <div class="sm-text">Training helps you think and feel better. join us!</div>
-      <div class="image-wrapper">
-        <img src="images/img_family_1.png" alt="">
-        <img src="images/img_family_2.png" alt="">
-        <img src="images/img_family_3.png" alt="">
-        <img src="images/img_family_4.png" alt="">
-        <img src="images/img_family_1.png" alt="">
+    <section class="section--family">
+      <div class="family__text--wrapper">
+        <div class="lg-text family__text--lg">be a part of our fit family</div>
+        <div class="sm-text family__text--sm">Training helps you think and feel better. join us!</div>
+      </div>
+        <div class="family__image--wrapper">
+          <img src="images/img_family_1.png" alt="">
+          <img src="images/img_family_2.png" alt="">
+          <img src="images/img_family_3.png" alt="">
+          <img src="images/img_family_4.png" alt="">
+          <img src="images/img_family_1.png" alt="">
       </div>
     </section>
-    
+
+<!-- 
+
     <section class="section-bmi">
       <div class="text-wrapper">
         
