--- a/footer-template.html
+++ b/footer-template.html
@@ -31,7 +31,7 @@
       </div>
       <div class="footer__item" id="footer__item--start-now">
         <div class="footer__item__title">start now</div>
-        <div class="btn--arrow"><input type="email" placeholder="Email"></div>
+        <div class="btn--arrow footer__btn"><input type="email" placeholder="Email" class="footer__input"></div>
         <div class="footer__item__icon-wrapper">
           <a><img src="images/ico_ticktok.svg" alt=""></a>
           <a><img src="images/ico_youtube.svg" alt=""></a>
