sub1 lmg link 수정

--- a/pages/sub1/sub1.html
+++ b/pages/sub1/sub1.html
@@ -29,11 +29,10 @@
 
         <nav class="gnb">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">ABOUT</a></li>
-                <li><a href="">mission</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">members</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="./pages/sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
+                <li><a href="./pages/sub3/sub3.html" target="_blank" title="Open new window">Curriculum</a></li>
+                <li><a href="./pages/sub2/sub2.html" target="_blank" title="Open new window">members</a></li>
             </ul>
         </nav>
     </header>
@@ -378,10 +377,9 @@
 
 
     <!-- 풋터 -->
-
     <footer>
         <div class="footer__wrapper ">
-            <div class="footer__logo"><img src="../../images/logo.png" alt=""></div>
+            <div class="footer__logo"><img src="images/logo.png" alt=""></div>
             <span class="footer__text">please feel free to send us an e-mail at kropp@qodeinteractive.com For any
                 additional inquiries</span>
             <div class="footer__item" id="footer__item--about">
@@ -407,18 +405,17 @@
                 <div class="footer__item__title">start now</div>
                 <div class="btn--arrow"><input type="email" placeholder="Email"></div>
                 <div class="footer__item__icon-wrapper">
-                    <a><img src="../../images/ico_ticktok.svg" alt=""></a>
-                    <a><img src="../../images/ico_youtube.svg" alt=""></a>
-                    <a><img src="../../images/ico_instagram.svg" alt=""></a>
-                    <a><img src="../../images/ico_facebook.svg" alt=""></a>
-                    <a><img src="../../images/ico_twitter.svg" alt=""></a>
+                    <a><img src="images/ico_ticktok.svg" alt=""></a>
+                    <a><img src="images/ico_youtube.svg" alt=""></a>
+                    <a><img src="images/ico_instagram.svg" alt=""></a>
+                    <a><img src="images/ico_facebook.svg" alt=""></a>
+                    <a><img src="images/ico_twitter.svg" alt=""></a>
                 </div>
             </div>
             <span class="footer__bottom-text">© 2022 Qode Interactive, All Rights Reserved | Privacy Policy | Contact
                 Us</span>
         </div>
     </footer>
-
 </body>
 
 </html>
