refactor: make responsive bmi section

--- a/index.html
+++ b/index.html
@@ -150,48 +150,45 @@
       </div>
     </section>
 
-<!-- 
-
-    <section class="section-bmi">
-      <div class="text-wrapper">
-        
-        <div class="lg-text">Input your BMI</div>
-        <div class="sm-text">Duo graece ponderum ne, ei mel aliquando. Pro te<br>tamquam nonumes, nam no nemore epicurei</div>
-        <div class="input-wrapper">
-          <input type="number" placeholder="Height / cm">
-          <input type="number" placeholder="Weight / kg">
-          <input type="number" placeholder="Age">
-          <input type="text" placeholder="Gender">
-          <input type="number" placeholder="Select an activity factor:">
+    <section class="section--bmi">
+      <div class="bmi__text--wrapper">
+        <div class="lg-text bmi__text--lg">Input your BMI</div>
+        <div class="sm-text bmi__text--sm">Duo graece ponderum ne, ei mel aliquando. Pro te<br>tamquam nonumes, nam no nemore epicurei</div>
+        <div class="bmi__input--wrapper">
+          <input id="bmi__input--height" type="number" placeholder="Height / cm">
+          <input id="bmi__input--weight" type="number" placeholder="Weight / kg">
+          <input id="bmi__input--age" type="number" placeholder="Age">
+          <input id="bmi--input--gender" type="text" placeholder="Gender">
+          <input id="bmi--input--factor" type="number" placeholder="Select an activity factor:">
         </div>
-        <button class="btn--arrow" id="btn-bmiCalculate">Calculate</button>
+        <button class="btn--arrow bmi__btn--bmi-calculate">Calculate</button>
       </div>
-      <div class="bmi-wrapper">
-        <div class="table">
-          <div class="header row">
-            <div class="cell">BMI</div>
-            <div class="cell">Weight status</div>
+      <div class="bmi__table--wrapper">
+        <div class="bmi__table">
+          <div class="bmi__table__header bmi__table__row">
+            <div class="bmi__table__cell">BMI</div>
+            <div class="bmi__table__cell">Weight status</div>
           </div>
-          <div class="row">
-            <div class="cell">Below 18.5</div>
-            <div class="cell">Underweight</div>
+          <div class="bmi__table__row">
+            <div class="bmi__table__cell">Below 18.5</div>
+            <div class="bmi__table__cell">Underweight</div>
           </div>
-          <div class="row">
-            <div class="cell">18.5 - 24.9</div>
-            <div class="cell">Healthy</div>
+          <div class="bmi__table__row">
+            <div class="bmi__table__cell">18.5 - 24.9</div>
+            <div class="bmi__table__cell">Healthy</div>
           </div>
-          <div class="row">
-            <div class="cell">25.0 - 29.9</div>
-            <div class="cell">Overweight</div>
+          <div class="bmi__table__row">
+            <div class="bmi__table__cell">25.0 - 29.9</div>
+            <div class="bmi__table__cell">Overweight</div>
           </div>
-          <div class="row">
-            <div class="cell">30.0 - and Above</div>
-            <div class="cell">Obese</div>
+          <div class="bmi__table__row">
+            <div class="bmi__table__cell">30.0 - and Above</div>
+            <div class="bmi__table__cell">Obese</div>
           </div>
         </div>
         <span> <strong>BMR</strong> Metabolic Rate / <strong>BMI</strong> Body Mass Index</span>
       </div>
-    </section> -->
+    </section>
   </main>
 
   <footer>
