fix hero sectoin

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="slider__silde slider__slide--information">
           <div class="slide__upper-wrapper">
             <div class="slide__image"><img src="images/slide.png" alt=""></div>
-            <div class="slide__small-text">New event<br>coming up / june 7 - 13</div>
+            <div class="slide__text--sm">New event<br>coming up / june 7 - 13</div>
           </div>
-          <div class="slide__big-text">crossfit</div>
+          <div class="slide__text--lg">crossfit</div>
         </div>
         <div class="slider__bullet">
           <img src="images/ico_bullet.svg" alt="">
